samples/_failures_safe/1761223705_779893_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21909263.c: In function ‘main’:
./samples/SAFE/__tmp_21909263.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_21909263.c:151:5: error: expected declaration or statement at end of input
  151 |     if
      |     ^~
